--- a/Geolocation.ipynb
+++ b/Geolocation.ipynb
@@ -558,7 +558,7 @@
    "id": "0529ec3a",
    "metadata": {},
    "source": [
-    "## Check [here](#) the Tableau visualization where this data was used to create an animated graph"
+    "## Check [here](https://public.tableau.com/app/profile/g.8610/viz/REDALERT/REDALERT) the Tableau visualization where this data was used to create an animated graph"
    ]
   },
   {
